--- a/home/style.css
+++ b/home/style.css
@@ -21,6 +21,26 @@ h1 {
     margin-bottom: 1.5rem;
 }
 
+.logout-container {
+    display: flex;
+    justify-content: center;
+    margin-top: 2rem;
+}
+
+button.btn-red {
+    background-color: #f44336; /* Rojo */
+    padding: 1rem 2rem;
+    border-radius: 8px;
+    font-size: 1rem;
+    font-weight: bold;
+    cursor: pointer;
+}
+
+button.btn-red:hover {
+    background-color: #d32f2f; /* Rojo oscuro al pasar el cursor */
+}
+
+
 button {
     border: none;
     padding: 0.75rem 1.5rem;
