--- a/venta/historial/style.css
+++ b/venta/historial/style.css
@@ -76,3 +76,18 @@ h1 {
     justify-content: center;
     margin-top: 20px;
 }
+
+.product-summary {
+    background-color: #f9f9f9;
+    padding: 1rem;
+    margin-top: 1rem;
+    border: 1px solid #ddd;
+    border-radius: 8px;
+}
+
+.product-summary p {
+    margin: 0.5rem 0;
+    font-size: 1.1rem;
+    font-weight: bold;
+    color: #333;
+}
